app/javascript/packs/application_css.scss
@import "~bootstrap/scss/bootstrap";

@import "../source/stylesheets/utils";

// For now, because we don't want to replicate all the styles immediately, we're hiding the footer
footer.primary-footer {
  display: none;
}

.admin-navbar {
  @include media-breakpoint-up(md) {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 1020;
  }
  .navbar-brand img {
    height: 35px;
  }
  .dropdown-toggle {
    cursor: pointer;
  }
}

.full-screen-table-wrapper {
  overflow-x: scroll;
}

